--- a/session3Vue/SDWebFrontEnd/index.html
+++ b/session3Vue/SDWebFrontEnd/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>p2sd</title>
+    <title>Ticket Market</title>
   </head>
   <body>
     <div id="app"></div>
